# etu-dubenetsky

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
database/: README.md
database/procedures/calculator/: calculator.sql
database/procedures/constructor/: constructor.sql
database/procedures/utils/: utils.sql
database/schema/: 01_tables.sql  02_indexes.sql
database/test-data/: 01_classifiers.sql  02_tariffs.sql
docs/: ARCHITECTURE.md  CHANGES.md  DOMAIN_SERVICE.md  REPORT.md  addition1.txt  addition2.txt  data.txt  example.txt  task.txt
docs/diagrams/: classes.puml  er-diagram.mmd  sequence.puml  use-cases.puml
src/: CMakeLists.txt  README.md  main.cpp
src/core/: CMakeLists.txt  Core.cpp  CostCalculator.hpp  DomainService.hpp  OptimalSearch.hpp  RuleEngine.hpp
src/core/include/core/: Models.h  TariffService.h
src/core/src/: TariffService.cpp
src/core_tests/: CMakeLists.txt  CalculationTests.cpp  ExecutorTests.cpp  IntegrationTests.cpp  OptimalExecutorTests.cpp  OrderTests.cpp  README.md  ServiceTypeTests.cpp  TariffTests.cpp  TestFixture.h  UnitTests.cpp
src/db/: CMakeLists.txt
src/db/include/db/: Database.h  DbApi.h
src/db/src/: Database.cpp  DbApi.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/gui/src/: MainWindow.cpp  MainWindow.h  main.cpp
src/gui/src/dialogs/: CoefficientDialog.cpp  CoefficientDialog.h  ExecutorDialog.cpp  ExecutorDialog.h  OptimalSearchDialog.cpp  OptimalSearchDialog.h  OrderDialog.cpp  OrderDialog.h  ParameterDialog.cpp  ParameterDialog.h  ServiceTypeDialog.cpp  ServiceTypeDialog.h  TariffDialog.cpp  TariffDialog.h  UnitDialog.cpp  UnitDialog.h
src/model/: CMakeLists.txt  Classifier.hpp  Model.cpp  Order.hpp  Parameter.hpp  Rule.hpp  Service.hpp  Tariff.hpp
src/utils/: CMakeLists.txt  Database.hpp  Repository.hpp  Types.hpp  Utils.cpp
tests/: CMakeLists.txt  README.md
tests/core/: core_test.cpp
tests/database/: database_test.cpp
tests/domain/: domain_service_test.cpp
tests/integration/: integration_test.cpp
tests/model/: model_test.cpp
